<resources>
    <string name="app_name">AEKS</string>
    <string name="textView">Sign in</string>
    <string name="Signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginBTN">Log in</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="signup">Sign up</string>
    <string name="tryBTN">Check Word</string>
    <string name="signupBTN">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="x">X</string>
    <string name="won">Congratulations you Won</string>
    <string name="play_again">Play Again</string>
    <string name="trophy">Trophy</string>
    <string name="fail">You Lost</string>



</resources>