<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="455dp"
    android:background="@color/white"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/finish"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="#e54a7e"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#e54a7e"
        android:text="@string/won"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
    />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/tr1"
        android:layout_margin="25dp"
        android:contentDescription="@string/trophy"
    />

    <Button
        android:id="@+id/ID_playBTN"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#e54a7e"
        android:text="@string/play_again"
    />


</LinearLayout>